--- a/src/_fonts.sass
+++ b/src/_fonts.sass
@@ -1,4 +1,7 @@
+// Import from Google fonts
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu&family=Ubuntu+Mono:wght@400;700&display=swap')
+
 $fonts-normal: "Open Sans", sans-serif
-$fonts-header: "Open Sans", sans-serif
+$fonts-header: "Ubuntu", sans-serif
 $fonts-code: "Roboto Mono", monospace
 
