Fix typo in _fonts.sass

--- a/src/_fonts.sass
+++ b/src/_fonts.sass
@@ -3,5 +3,5 @@
 
 $fonts-normal: "Open Sans", sans-serif
 $fonts-header: "Ubuntu", sans-serif
-$fonts-code: "Roboto Mono", monospace
+$fonts-code: "Ubuntu Mono", monospace
 
