Add TextBox component for inputs with error messages

--- a/src/_colors.sass
+++ b/src/_colors.sass
@@ -7,3 +7,5 @@ $color-accent--light: #5efc82
 $color-accent--dark: #009624
 
 $color-text--secondary: #e0e0e0
+$color-error: #b00020
+$color-error--light: #ff5131
