Display calculated values in KeyGenerator

--- a/src/components/KeyGenerator.module.sass
+++ b/src/components/KeyGenerator.module.sass
@@ -3,11 +3,12 @@
 
 .container
   display: flex
-  justify-content: space-between
+  justify-content: space-around
 
 .desc
   padding-bottom: 8px
   color: $color-text--secondary
+  font-weight: 700
 
 .form
   display: block
@@ -17,4 +18,23 @@
   background-color: $color-accent
   color: #ffffff
   font-family: $fonts-code
+
+.table
+  padding: 8px
+  text-align: left
+  th
+    padding-right: 16px
+    font-weight: 500
+
+.variable
+  padding-bottom: 8px
+  color: $color-text--secondary
+  font-family: $fonts-code
+  font-size: 20px
+
+.value
+  padding-bottom: 8px
+  color: $color-accent
+  font-family: $fonts-code
+  font-size: 20px
 
