Move button styling to global stylesheet

--- a/src/index.sass
+++ b/src/index.sass
@@ -1,3 +1,4 @@
+@import "./_colors.sass"
 @import "./_fonts.sass"
 
 *
@@ -15,3 +16,8 @@ a
 code
   font-family: $fonts-code
 
+button
+  padding: 4px 8px
+  background-color: $color-accent
+  color: #ffffff
+  font-family: $fonts-code
