--- a/src/index.sass
+++ b/src/index.sass
@@ -21,3 +21,19 @@ button
   background-color: $color-accent
   color: #ffffff
   font-family: $fonts-code
+
+table
+  padding: 8px
+  text-align: left
+  th
+    padding-right: 16px
+    font-weight: 500
+    p
+      padding-bottom: 8px
+      color: $color-text--secondary
+      font-family: $fonts-code
+      font-size: 20px
+  td>p
+    padding-bottom: 8px
+    color: $color-accent
+    font-family: $fonts-code
