Lift common container styling to parent Section component

--- a/src/components/Section.module.sass
+++ b/src/components/Section.module.sass
@@ -10,3 +10,7 @@
   font-family: $fonts-code
   font-size: 28px
   color: $color-accent--light
+
+.container
+  display: flex
+  justify-content: space-around
