Extend vertical spacing of layout

--- a/src/components/Footer.module.sass
+++ b/src/components/Footer.module.sass
@@ -2,7 +2,8 @@
 @import "../_fonts.sass"
 
 .footer
-  padding: 36px 0
+  padding-top: 48px
+  padding-bottom: 76px
   background-color: #000000
 
 .text
