--- a/src/components/Description.module.sass
+++ b/src/components/Description.module.sass
@@ -1,7 +1,7 @@
 @import "../_colors.sass"
 
 .description
-  padding: 32px 0
+  padding: 24px 0 56px 0
   background-color: $color-primary--dark
   color: $color-text--secondary
   text-align: justify
